# yolov5_ncnn

./: CMakeLists.txt  PC2arduino.cpp  README.md  main.cpp  yoloV5.cpp  yoloV5.h
model/: best.param
seriallib/test/arduino/: code.ino
